--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "cross-env": "^7.0.3",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.29.2",
-    "db-models-nc": "^1.1.74",
     "dotenv": "^16.0.1",
     "joi": "^17.6.0",
+    "nc-db-new": "^1.2.3",
     "pg": "^8.7.3",
-    "sequelize": "^6.21.1",
+    "sequelize": "^6.29.1",
     "stripe": "^10.12.0",
     "ts-jest": "^28.0.5",
     "umzug": "^3.1.1",
